# SpaceTraders

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/autovcpkg/: AutoVcpkg.cmake
cmake/scripts/: BootstrapVcpkg.cmake
src/: CMakeLists.txt  main.cpp
src/api/: Agent.cpp  Agent.hpp  Contract.cpp  Contract.hpp  Endpoint.cpp  Endpoint.hpp  Faction.cpp  Faction.hpp  JumpGate.cpp  JumpGate.hpp  Market.cpp  Market.hpp  Result.hpp  Shipyard.cpp  Shipyard.hpp  System.cpp  System.hpp  Waypoint.cpp  Waypoint.hpp
src/imgui/: Context.cpp  Context.hpp
src/imgui/widgets/: imgui_canvas.cpp  imgui_canvas.h
src/rendering/: Device.cpp  Device.hpp
src/windows/: Application.cpp  Application.hpp  Contracts.cpp  Contracts.hpp  Factions.cpp  Factions.hpp  Fleet.cpp  Fleet.hpp  StarMap.cpp  StarMap.hpp
